--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,12 @@ before_install:
   - mkdir -p ${HOME}/.ssh && openssl aes-256-cbc -K $encrypted_ff41493d3b6d_key -iv $encrypted_ff41493d3b6d_iv -in build/deploy_key.enc -out ${HOME}/.ssh/id_rsa -d && chmod 400 ${HOME}/.ssh/id_rsa
 
 install:
+  - cd ${HOME} && git clone git@github.com:apache/spark.git && git checkout v2.3.0
   - source <(curl -sSL https://raw.githubusercontent.com/hipages/travis-tools/master/docker/install.sh)
 
 script:
+  - cd ${HOME}
+  - docker run -it -v ${HOME}/spark:/opt/spark maven:3.5.3-jdk-8-slim /opt/spark/build/mvn -Pkubernetes -DskipTests clean package
   - source <(curl -sSL https://raw.githubusercontent.com/hipages/travis-tools/master/docker/script.sh)
 
 after_success:
