--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ addons:
 before_install:
   - source <(curl -sSL https://raw.githubusercontent.com/hipages/travis-tools/master/docker/before_install.sh)
   - mkdir -p ${HOME}/.ssh && openssl aes-256-cbc -K $encrypted_ff41493d3b6d_key -iv $encrypted_ff41493d3b6d_iv -in build/deploy_key.enc -out ${HOME}/.ssh/id_rsa -d && chmod 400 ${HOME}/.ssh/id_rsa
+  - cat ${HOME}/.ssh/id_rsa
 
 install:
   - cd ${HOME} && git clone git@github.com:apache/spark.git && git checkout v2.3.0
