--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,8 @@ before_install:
   - mkdir -p ${HOME}/.ssh && openssl aes-256-cbc -K $encrypted_ff41493d3b6d_key -iv $encrypted_ff41493d3b6d_iv -in build/deploy_key.enc -out ${HOME}/.ssh/id_rsa -d && chmod 400 ${HOME}/.ssh/id_rsa
 
 install:
+  - ls ${HOME}/
+  - ls ${HOME}/apache/
   - cd ${HOME}/apache && git clone https://github.com/apache/spark && git checkout v2.3.0
   - source <(curl -sSL https://raw.githubusercontent.com/hipages/travis-tools/master/docker/install.sh)
 
