--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ before_install:
 install:
   - ls ${HOME}/
   - ls ${HOME}/apache/
-  - cd ${HOME}/apache && echo ${PWD} && git clone https://github.com/apache/spark && git checkout v2.3.0
+  - cd ${HOME}/apache && echo ${PWD} && git clone https://github.com/apache/spark . && git checkout v2.3.0
   - source <(curl -sSL https://raw.githubusercontent.com/hipages/travis-tools/master/docker/install.sh)
 
 script:
