--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ install:
 
 script:
   - cd ${HOME}
-  - docker run -it -v ${HOME}/spark:/opt/spark maven:3.5.3-jdk-8-slim /bin/bash -c "cd /opt/spark/build && mvn -Pkubernetes -DskipTests clean package"
+  - docker run -it -v ${HOME}/spark:/opt/spark maven:3.5.3-jdk-8-slim /bin/bash -c "cd /opt/spark && ./build/mvn -Pkubernetes -DskipTests clean package"
   - source <(curl -sSL https://raw.githubusercontent.com/hipages/travis-tools/master/docker/script.sh)
 
 after_success:
