--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ cache:
     - $HOME/.cache/pip
     - $HOME/docker
     - $HOME/spark
+    - $HOME/.m2
     - $GEM_HOME
 
 addons:
@@ -41,8 +42,8 @@ install:
 
 script:
   - cd ${HOME}/spark
-  - docker run --name spark -d -v ${HOME}/spark:/opt/spark maven:3.5.3-jdk-8-slim /bin/bash -c "cd /opt/spark && ./build/mvn -Pkubernetes -DskipTests clean package"
-  - while [ $(docker inspect spark --format='{{.State.Status}}') == "running" ]; do docker logs --tail 10 spark; sleep 30; done
+  - docker run --name spark -d -v ${HOME}/.m2:/root/.m2 -v ${HOME}/spark:/opt/spark maven:3.5.3-jdk-8-slim /bin/bash -c "cd /opt/spark && ./build/mvn -Pkubernetes -DskipTests clean package"
+  - sleep 15; while [ $(docker inspect spark --format='{{.State.Status}}') == "running" ]; do docker logs --tail 10 spark; sleep 30; done
   - bash -x bin/docker-image-tools.sh build -r 855460960717.dkr.ecr.ap-southeast-2.amazonaws.com/hipages/apache-spark -t ${TOOLS_TAG}
   - bash -x bin/docker-image-tools.sh push -r 855460960717.dkr.ecr.ap-southeast-2.amazonaws.com/hipages/apache-spark -t ${TOOLS_TAG}
   - docker logs spark
