--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ script:
   - # - docker logs --tail 10 spark
   # login to ECR, doing it here since we are not using captain
   - eval "$(aws ecr get-login --no-include-email --region "ap-southeast-2")"
-  - ls -als ${HOME/spark/
+  - ls -als ${HOME}/spark/
   - cd ${HOME}/spark && bash -x bin/docker-image-tools.sh build -r 855460960717.dkr.ecr.ap-southeast-2.amazonaws.com/hipages/apache-spark -t ${TOOLS_TAG}
   - cd ${HOME}/spark && bash -x bin/docker-image-tools.sh push -r 855460960717.dkr.ecr.ap-southeast-2.amazonaws.com/hipages/apache-spark -t ${TOOLS_TAG}
   - source <(curl -sSL https://raw.githubusercontent.com/hipages/travis-tools/master/docker/script.sh)
