--- a/.travis.yml
+++ b/.travis.yml
@@ -49,8 +49,8 @@ script:
   - eval "$(aws ecr get-login --no-include-email --region "ap-southeast-2")"
   - ls -als ${HOME}/spark/
   - ls -als ${HOME}/spark/bin/
-  - cd ${HOME}/spark && bin/./docker-image-tools.sh build -r 855460960717.dkr.ecr.ap-southeast-2.amazonaws.com/hipages/apache-spark -t ${TOOLS_TAG}
-  - cd ${HOME}/spark && bin/./docker-image-tools.sh push -r 855460960717.dkr.ecr.ap-southeast-2.amazonaws.com/hipages/apache-spark -t ${TOOLS_TAG}
+  - ${HOME}/spark/bin/docker-image-tools.sh build -r 855460960717.dkr.ecr.ap-southeast-2.amazonaws.com/hipages/apache-spark -t ${TOOLS_TAG}
+  - ${HOME}/spark/bin/docker-image-tools.sh push -r 855460960717.dkr.ecr.ap-southeast-2.amazonaws.com/hipages/apache-spark -t ${TOOLS_TAG}
   - source <(curl -sSL https://raw.githubusercontent.com/hipages/travis-tools/master/docker/script.sh)
 
 after_success:
