--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ install:
   - source <(curl -sSL https://raw.githubusercontent.com/hipages/travis-tools/master/docker/install.sh)
 
 script:
+  - mkdir -p ${HOME}/spark/assembly/target/scala-2.11/jars/
   - cd ${HOME}/spark/assembly/target/scala-2.11/jars/ && curl -L -O https://raw.github.com/banzaicloud/spark-metrics/master/maven-repo/releases?filepath=io/dropwizard/metrics/metrics-core/3.1.2/io.dropwizard.metrics:metrics-core:3.1.2.jar
   - cd ${HOME}/spark/assembly/target/scala-2.11/jars/ && curl -L -O https://raw.github.com/banzaicloud/spark-metrics/master/maven-repo/releases?filepath=io/prometheus/simpleclient/0.3.0/io.prometheus_simpleclient-0.3.0.jar
   - cd ${HOME}/spark/assembly/target/scala-2.11/jars/ && curl -L -O https://raw.github.com/banzaicloud/spark-metrics/master/maven-repo/releases?filepath=io/prometheus/simpleclient_common/0.3.0/io.prometheus_simpleclient_common-0.3.0.jar
